[tb] explicit color to avoid blank line with dark mode

--- a/gc_lang/fr/mailext/content/overlay.css
+++ b/gc_lang/fr/mailext/content/overlay.css
@@ -22,6 +22,7 @@ menuitem#gl-item-analyze {
     overflow: auto;
     height: 500px;
     max-height: 650px;
+    color: hsl(0, 0%, 0%);
 }
 #textformatter-title {
     margin-top: 10px;
@@ -86,6 +87,7 @@ menuitem#gl-item-analyze {
 #grammalecte-errors p {
     display: block;
     margin-left: 10px;
+    color: hsl(0, 0%, 0%);
 }
 #grammalecte-errors p.paragraph {
     margin-top: 20px;
